// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should handle location received in callback 1`] = `
<WeatherComponent
  forecastURL="/weather/forecast"
  locationURL="/weather/location"
>
  <div
    className="weather__container"
  >
    <Location
      locationURL="/weather/location"
      onLocationError={[Function]}
      onLocationReceived={[Function]}
      onNameReceived={[Function]}
    >
      <div
        className="weather__location"
      >
        Waiting for location
      </div>
    </Location>
    <div>
      <p
        className="weather__current-summary"
        title={null}
      >
        <span>
          Loading weather data...
        </span>
      </p>
      <div
        className="weather__current-forecast"
      >
        <HourSlider
          name="default"
        >
          <img
            className="weather__icon"
            src="<svg version=\\"1.1\\" id=\\"Layer_1\\" xmlns=\\"http://www.w3.org/2000/svg\\" x=\\"0\\" y=\\"0\\" width=\\"100\\" height=\\"100\\" xml:space=\\"preserve\\"><path d=\\"M63.295 43.878h-.125l-.525 2.774-1.274 3.873h3.748l-1.301-3.898z\\"/><path d=\\"M50 20c-16.568 0-30 13.432-30 30s13.432 30 30 30c16.569 0 30-13.432 30-30S66.568 20 50 20zm-7.448 37.273h-2.499l-6.572-9.247-1.375-2.75h-.125l.399 2.75v9.122h-3.248V39.53h2.499l6.622 9.321 1.325 2.674h.125l-.4-2.674v-9.196h3.249v17.618zm4.848 3.373l-2.449-1.149 8.921-20.143 2.449 1.1L47.4 60.646zm19.868-3.498l-1.398-3.873h-5.373l-1.324 3.873h-3.424l6.297-17.62h2.523l6.299 17.62h-3.6z\\"/></svg>"
          />
        </HourSlider>
        <div
          className="weather__current-temp"
        >
          --
        </div>
        <div
          className="weather__current-perc"
        >
          <p>
            Precip: --
          </p>
          <p>
            Humidity: --
          </p>
          <p>
            Wind: --
          </p>
        </div>
      </div>
    </div>
    <div
      className="weather__slider"
    >
      <HourSlider
        forecastURL="/weather/forecast"
        latitude={51.505455}
        longitude={-0.075356}
        onForecastError={[Function]}
        onForecastReceived={[Function]}
        onSliderChange={[Function]}
      >
        <ComponentEnhancer(undefined)
          activeDotStyle={Object {}}
          className=""
          disabled={true}
          dotStyle={Object {}}
          dots={false}
          handle={[Function]}
          handleStyle={
            Array [
              Object {},
            ]
          }
          included={false}
          marks={Object {}}
          max={11}
          min={0}
          onAfterChange={[Function]}
          onBeforeChange={[Function]}
          onChange={[Function]}
          prefixCls="rc-slider"
          railStyle={Object {}}
          reverse={false}
          step={1}
          trackStyle={
            Array [
              Object {},
            ]
          }
          vertical={false}
        >
          <div
            className="rc-slider rc-slider-disabled"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="rc-slider-rail"
              style={Object {}}
            />
            <Track
              className="rc-slider-track"
              included={false}
              length={0}
              offset={0}
              reverse={false}
              style={Object {}}
              vertical={false}
            />
            <Steps
              activeDotStyle={Object {}}
              dotStyle={Object {}}
              dots={false}
              included={false}
              lowerBound={0}
              marks={Object {}}
              max={11}
              min={0}
              prefixCls="rc-slider"
              reverse={false}
              step={1}
              upperBound={0}
              vertical={false}
            >
              <div
                className="rc-slider-step"
              />
            </Steps>
            <Handle
              className="rc-slider-handle"
              disabled={true}
              key="0"
              max={11}
              min={0}
              offset={0}
              prefixCls="rc-slider"
              reverse={false}
              style={Object {}}
              value={0}
              vertical={false}
            >
              <div
                aria-disabled={true}
                aria-valuemax={11}
                aria-valuemin={0}
                aria-valuenow={0}
                className="rc-slider-handle"
                onBlur={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="slider"
                style={
                  Object {
                    "left": "0%",
                    "right": "auto",
                    "transform": "translateX(-50%)",
                  }
                }
                tabIndex={null}
              />
            </Handle>
            <Marks
              className="rc-slider-mark"
              included={false}
              lowerBound={0}
              marks={Object {}}
              max={11}
              min={0}
              onClickLabel={[Function]}
              reverse={false}
              upperBound={0}
              vertical={false}
            >
              <div
                className="rc-slider-mark"
              />
            </Marks>
          </div>
        </ComponentEnhancer(undefined)>
      </HourSlider>
    </div>
    <div
      className="weather__daily"
    >
      <div
        className="weather__day"
      >
        <t
          ago={false}
          calendar={false}
          decimal={false}
          element={null}
          filter={[Function]}
          format="[--]"
          fromNow={false}
          interval={60000}
          local={false}
          onChange={[Function]}
          titleFormat=""
          toNow={false}
          unit={null}
          unix={true}
          utc={false}
          withTitle={false}
        >
          <time
            dateTime={"1970-01-01T00:00:00.000Z"}
          >
            --
          </time>
        </t>
        <HourSlider
          name="default"
        >
          <img
            className="weather__icon"
            src="<svg version=\\"1.1\\" id=\\"Layer_1\\" xmlns=\\"http://www.w3.org/2000/svg\\" x=\\"0\\" y=\\"0\\" width=\\"100\\" height=\\"100\\" xml:space=\\"preserve\\"><path d=\\"M63.295 43.878h-.125l-.525 2.774-1.274 3.873h3.748l-1.301-3.898z\\"/><path d=\\"M50 20c-16.568 0-30 13.432-30 30s13.432 30 30 30c16.569 0 30-13.432 30-30S66.568 20 50 20zm-7.448 37.273h-2.499l-6.572-9.247-1.375-2.75h-.125l.399 2.75v9.122h-3.248V39.53h2.499l6.622 9.321 1.325 2.674h.125l-.4-2.674v-9.196h3.249v17.618zm4.848 3.373l-2.449-1.149 8.921-20.143 2.449 1.1L47.4 60.646zm19.868-3.498l-1.398-3.873h-5.373l-1.324 3.873h-3.424l6.297-17.62h2.523l6.299 17.62h-3.6z\\"/></svg>"
          />
        </HourSlider>
        <p
          className="weather__temp"
        >
          --
        </p>
        <p
          className="weather__temp weather__temp--low"
        >
          --
        </p>
      </div>
    </div>
    <p
      className="weather__icon-link"
    >
      <a
        href="https://www.freepik.com/free-vector/weather-icons-set_709126.htm"
        target="_blank"
      >
        Icons created by freepik - www.freepik.com
      </a>
    </p>
  </div>
</WeatherComponent>
`;

exports[`Should render initial state correctly 1`] = `
<WeatherComponent
  forecastURL="/weather/forecast"
  locationURL="/weather/location"
>
  <div
    className="weather__container"
  >
    <Location
      locationURL="/weather/location"
      onLocationError={[Function]}
      onLocationReceived={[Function]}
      onNameReceived={[Function]}
    >
      <div
        className="weather__location"
      >
        Waiting for location
      </div>
    </Location>
    <div>
      <p
        className="weather__current-summary"
        title={null}
      >
        <span>
          Loading weather data...
        </span>
      </p>
      <div
        className="weather__current-forecast"
      >
        <HourSlider
          name="default"
        >
          <img
            className="weather__icon"
            src="<svg version=\\"1.1\\" id=\\"Layer_1\\" xmlns=\\"http://www.w3.org/2000/svg\\" x=\\"0\\" y=\\"0\\" width=\\"100\\" height=\\"100\\" xml:space=\\"preserve\\"><path d=\\"M63.295 43.878h-.125l-.525 2.774-1.274 3.873h3.748l-1.301-3.898z\\"/><path d=\\"M50 20c-16.568 0-30 13.432-30 30s13.432 30 30 30c16.569 0 30-13.432 30-30S66.568 20 50 20zm-7.448 37.273h-2.499l-6.572-9.247-1.375-2.75h-.125l.399 2.75v9.122h-3.248V39.53h2.499l6.622 9.321 1.325 2.674h.125l-.4-2.674v-9.196h3.249v17.618zm4.848 3.373l-2.449-1.149 8.921-20.143 2.449 1.1L47.4 60.646zm19.868-3.498l-1.398-3.873h-5.373l-1.324 3.873h-3.424l6.297-17.62h2.523l6.299 17.62h-3.6z\\"/></svg>"
          />
        </HourSlider>
        <div
          className="weather__current-temp"
        >
          --
        </div>
        <div
          className="weather__current-perc"
        >
          <p>
            Precip: --
          </p>
          <p>
            Humidity: --
          </p>
          <p>
            Wind: --
          </p>
        </div>
      </div>
    </div>
    <div
      className="weather__slider"
    >
      <HourSlider
        forecastURL="/weather/forecast"
        latitude={null}
        longitude={null}
        onForecastError={[Function]}
        onForecastReceived={[Function]}
        onSliderChange={[Function]}
      >
        <ComponentEnhancer(undefined)
          activeDotStyle={Object {}}
          className=""
          disabled={true}
          dotStyle={Object {}}
          dots={false}
          handle={[Function]}
          handleStyle={
            Array [
              Object {},
            ]
          }
          included={false}
          marks={Object {}}
          max={11}
          min={0}
          onAfterChange={[Function]}
          onBeforeChange={[Function]}
          onChange={[Function]}
          prefixCls="rc-slider"
          railStyle={Object {}}
          reverse={false}
          step={1}
          trackStyle={
            Array [
              Object {},
            ]
          }
          vertical={false}
        >
          <div
            className="rc-slider rc-slider-disabled"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="rc-slider-rail"
              style={Object {}}
            />
            <Track
              className="rc-slider-track"
              included={false}
              length={0}
              offset={0}
              reverse={false}
              style={Object {}}
              vertical={false}
            />
            <Steps
              activeDotStyle={Object {}}
              dotStyle={Object {}}
              dots={false}
              included={false}
              lowerBound={0}
              marks={Object {}}
              max={11}
              min={0}
              prefixCls="rc-slider"
              reverse={false}
              step={1}
              upperBound={0}
              vertical={false}
            >
              <div
                className="rc-slider-step"
              />
            </Steps>
            <Handle
              className="rc-slider-handle"
              disabled={true}
              key="0"
              max={11}
              min={0}
              offset={0}
              prefixCls="rc-slider"
              reverse={false}
              style={Object {}}
              value={0}
              vertical={false}
            >
              <div
                aria-disabled={true}
                aria-valuemax={11}
                aria-valuemin={0}
                aria-valuenow={0}
                className="rc-slider-handle"
                onBlur={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="slider"
                style={
                  Object {
                    "left": "0%",
                    "right": "auto",
                    "transform": "translateX(-50%)",
                  }
                }
                tabIndex={null}
              />
            </Handle>
            <Marks
              className="rc-slider-mark"
              included={false}
              lowerBound={0}
              marks={Object {}}
              max={11}
              min={0}
              onClickLabel={[Function]}
              reverse={false}
              upperBound={0}
              vertical={false}
            >
              <div
                className="rc-slider-mark"
              />
            </Marks>
          </div>
        </ComponentEnhancer(undefined)>
      </HourSlider>
    </div>
    <div
      className="weather__daily"
    >
      <div
        className="weather__day"
      >
        <t
          ago={false}
          calendar={false}
          decimal={false}
          element={null}
          filter={[Function]}
          format="[--]"
          fromNow={false}
          interval={60000}
          local={false}
          onChange={[Function]}
          titleFormat=""
          toNow={false}
          unit={null}
          unix={true}
          utc={false}
          withTitle={false}
        >
          <time
            dateTime={"1970-01-01T00:00:00.000Z"}
          >
            --
          </time>
        </t>
        <HourSlider
          name="default"
        >
          <img
            className="weather__icon"
            src="<svg version=\\"1.1\\" id=\\"Layer_1\\" xmlns=\\"http://www.w3.org/2000/svg\\" x=\\"0\\" y=\\"0\\" width=\\"100\\" height=\\"100\\" xml:space=\\"preserve\\"><path d=\\"M63.295 43.878h-.125l-.525 2.774-1.274 3.873h3.748l-1.301-3.898z\\"/><path d=\\"M50 20c-16.568 0-30 13.432-30 30s13.432 30 30 30c16.569 0 30-13.432 30-30S66.568 20 50 20zm-7.448 37.273h-2.499l-6.572-9.247-1.375-2.75h-.125l.399 2.75v9.122h-3.248V39.53h2.499l6.622 9.321 1.325 2.674h.125l-.4-2.674v-9.196h3.249v17.618zm4.848 3.373l-2.449-1.149 8.921-20.143 2.449 1.1L47.4 60.646zm19.868-3.498l-1.398-3.873h-5.373l-1.324 3.873h-3.424l6.297-17.62h2.523l6.299 17.62h-3.6z\\"/></svg>"
          />
        </HourSlider>
        <p
          className="weather__temp"
        >
          --
        </p>
        <p
          className="weather__temp weather__temp--low"
        >
          --
        </p>
      </div>
    </div>
    <p
      className="weather__icon-link"
    >
      <a
        href="https://www.freepik.com/free-vector/weather-icons-set_709126.htm"
        target="_blank"
      >
        Icons created by freepik - www.freepik.com
      </a>
    </p>
  </div>
</WeatherComponent>
`;
